# vira

./: .aider.chat.history.md  .aider.input.history  .envrc  .ghcid  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .prettierignore  .stan.toml  AGENTS.md  CLAUDE.md  DESIGN.md  DYNAMIC.md  PLAN.md  PLAYWRIGHT.PLAN.md  README.md  REFACTOR.md  STATUS.md  cabal-repl  cabal.project  flake.nix  hie.yaml  hlint-report.html  hpack-common.yaml  hpack-relude.yaml  https.html  index.html  justfile  modules.html  om.yaml  sample.json  static  tailwind.css  tech.html  vira.cabal  vira.hs
-/: all.html  export.json  export.md  stork.st  tags.html  tasks.html
.agent/rules/: design.md  project.md
.agent/skills/haskell/: RELUDE.md  SKILL.md
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  playwright.yaml  website.yaml
.zed/: settings.json
app/: Main.hs
doc/: architecture.md  contrib.md  index.md  index.yaml  modules.md
doc/guide/: cleanup.md  cli.md  config.md  https.md  index.md  modules.md  remote-builds.md
docs/: configuration.md  flake.nix  github-integration.md  https.md  index.md  index.yaml  modules.md  tech.md
home-units/: README.md  cabal.project  ghcid.sh
nix/examples/home-manager/: flake.nix
nix/examples/nixos/: flake.nix
nix/modules/common/: vira-options.nix
nix/modules/flake-parts/: apps.nix  assets.nix  devshell.nix  haskell.nix  home-manager-module.nix  hpack-watch.nix  http2.nix  nixos-module.nix  om.nix  overlays.nix  playwright.nix  pre-commit.nix  tests.nix  vira-dev.nix
nix/modules/flake-parts/haskell-packages/: default.nix  vira-repo-config.nix
nix/modules/home-manager/: vira.nix
nix/modules/nixos/: vira.nix
nix/overlays/: nix-serve-ng.nix
scripts/: generate-iconoir-bindings.sh
src/Vira/: App.hs  Routes.hs  Status.hs  Supervisor.hs  Toplevel.hs  Widgets.hs
src/Vira/App/: AcidState.hs  Beam.hs  CLI.hs  LinkTo.hs  Logging.hs  Repo.hs  Run.hs  Server.hs  Stack.hs
src/Vira/App/LinkTo/: Resolve.hs  Type.hs
src/Vira/Lib/: Attic.hs  Cachix.hs  CircularBuffer.hs  FileTailer.hs  Git.hs  HTMX.hs  Logplex.hs  Omnix.hs  Process.hs  TLS.hs
src/Vira/Lib/Process/: TailF.hs
src/Vira/Page/: BranchJobsPage.hs  BranchPage.hs  IndexPage.hs  JobLog.hs  JobPage.hs  RegistryPage.hs  RepoPage.hs  SettingsPage.hs
src/Vira/State/: Acid.hs  Core.hs  Type.hs
src/Vira/Stream/: Log.hs  Status.hs
src/Vira/Supervisor/: Core.hs  LogBroadcast.hs  Task.hs  Type.hs
src/Vira/Widgets/: Alert.hs  Button.hs  Code.hs  Form.hs  Layout.hs
static/: htmx-extensions  tailwind.css
tests/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/: basic.test.ts  justfile  package-lock.json  package.json  playwright.config.ts  utils.ts
tests/e2e/pages/: main-page.ts  repositories-page.ts  repository-page.ts
tests/e2e/tests/: hello-world.spec.ts  main-page.spec.ts  repository-management.spec.ts
